# crypto-arbitrage-detector

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat
include/arb/: crypto_arb.hpp
include/lob/: latency_histogram.hpp
src/: crypto_arb.cpp  crypto_arb_main.cpp
tests/: crypto_arb_tests.cpp
